--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: My Blog
 description: '胡慧聪的小基地' # this means to ignore newlines until "baseurl:"
 permalink: ':title:output_ext'
 baseurl: "" # the subpath of your site
-url: "http://JungleMiss.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://JungleMiss.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 logo: "/assets/img/branding/MVM-logo-full.svg"
 logo-icon: "/assets/img/branding/MVM-symbol.svg"
 logo-icon-SEO: "/assets/img/branding/MVM-symbol-black.png" # must be a non SVG file
